// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render without value 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2:after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 0.5rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0.375rem 0.5rem;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(0.5rem * 2 + 8px);
  position: relative;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="pbl-nativeSelect-wrapper"
      name="nativeSelect"
      width="300"
    >
      <div
        class="emotion-2"
      >
        <select
          aria-invalid="false"
          class="emotion-3"
          data-testid="pbl-nativeSelect"
          id="custom-id"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`Show error when an error message is given 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  border-color: var(--pbl-theme-colors-negative-main);
  width: 300px;
}

.emotion-1:focus {
  box-shadow: 0 0 0 3px var(--pbl-theme-colors-negative-lightest);
}

.emotion-2 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2:after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 0.5rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0.375rem 0.5rem;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(0.5rem * 2 + 8px);
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-info-lineHeight);
  font-size: var(--pbl-theme-typography-info-fontSize);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-top: 0.25rem;
  color: var(--pbl-theme-colors-negative-main);
  margin-top: 0.25rem;
  color: var(--pbl-theme-colors-negative-main);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="pbl-nativeSelect-wrapper"
      name="nativeSelect"
      width="300"
    >
      <div
        class="emotion-2"
      >
        <select
          aria-errormessage="custom-id-error"
          aria-invalid="true"
          class="emotion-3"
          data-testid="pbl-nativeSelect"
          id="custom-id"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
    <p
      aria-live="polite"
      class="emotion-4"
      data-testid="pbl-nativeSelect-infotext"
      id="custom-id-error"
    >
      Something 
      <strong>
        terrible
      </strong>
       happened!
    </p>
  </div>
</div>
`;

exports[`Show infotext when available 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.emotion-2 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2:after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 0.5rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0.375rem 0.5rem;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(0.5rem * 2 + 8px);
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-info-lineHeight);
  font-size: var(--pbl-theme-typography-info-fontSize);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-top: 0.25rem;
  color: var(--pbl-theme-colors-text-info);
  margin-top: 0.25rem;
  color: var(--pbl-theme-colors-text-info);
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="pbl-nativeSelect-wrapper"
      name="nativeSelect"
      width="300"
    >
      <div
        class="emotion-2"
      >
        <select
          aria-describedby="custom-id-info"
          aria-invalid="false"
          class="emotion-3"
          data-testid="pbl-nativeSelect"
          id="custom-id"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
    <p
      aria-live="polite"
      class="emotion-4"
      data-testid="pbl-nativeSelect-infotext"
      id="custom-id-info"
    >
      Something that 
      <strong>
        helps
      </strong>
    </p>
  </div>
</div>
`;

exports[`Show label when available 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: 0.375rem;
  margin-bottom: 0.375rem;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  -webkit-transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.emotion-3 {
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3:after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 0.5rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0.375rem 0.5rem;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(0.5rem * 2 + 8px);
  position: relative;
}

<div>
  <div
    class="emotion-0"
  >
    <label
      data-testid="pbl-nativeSelect-label"
      for="custom-id"
    >
      <p
        class="emotion-1"
      >
        Your 
        <strong>
          name
        </strong>
      </p>
    </label>
    <div
      class="emotion-2"
      data-testid="pbl-nativeSelect-wrapper"
      name="nativeSelect"
      width="300"
    >
      <div
        class="emotion-3"
      >
        <select
          aria-invalid="false"
          class="emotion-4"
          data-testid="pbl-nativeSelect"
          id="custom-id"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
